--- a/Afef.ipynb
+++ b/Afef.ipynb
@@ -21447,21 +21447,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Code Postal ? 75011\n",
-      "Nom ? \n"
+      "Code Postal : a\n",
+      "Nom : a\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67f61b1ad56447e0a43f5e7138c2c6ce",
+       "model_id": "5f79073450424d7aa5c4a7027fff45ac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -21476,15 +21476,15 @@
    "source": [
     "import ipywidgets as widgets\n",
     "\n",
-    "postal_code=input(\"Code Postal ? \")\n",
-    "nom=input(\"Nom ? \")\n",
+    "postal_code=input(\"Code Postal : \")\n",
+    "nom=input(\"Nom : \")\n",
     "spe_value = widgets.Dropdown(options=spe_Spe, value=None)\n",
     "spe_value\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -21520,79 +21520,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Basique</td>\n",
-       "      <td>+33 1 40 24 20 48</td>\n",
-       "      <td>Tapas</td>\n",
-       "      <td>[De 16 à 35 €]</td>\n",
-       "      <td>Paris</td>\n",
-       "      <td>75011</td>\n",
-       "      <td>164, av. Ledru-Rollin</td>\n",
-       "      <td>48.856626</td>\n",
-       "      <td>2.379403</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51</th>\n",
-       "      <td>Le Dauphin</td>\n",
-       "      <td>+33 1 55 28 78 88</td>\n",
-       "      <td>Tapas,Bar à vins / Cave à manger</td>\n",
-       "      <td>[De 36 à 50 €]</td>\n",
-       "      <td>Paris</td>\n",
-       "      <td>75011</td>\n",
-       "      <td>131, av. Parmentier</td>\n",
-       "      <td>48.869447</td>\n",
-       "      <td>2.371115</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>Le P’tit Pinard</td>\n",
-       "      <td>+33 9 87 02 00 11</td>\n",
-       "      <td>Bistrot,Tapas,Bar à vins / Cave à manger</td>\n",
-       "      <td>[De 16 à 35 €]</td>\n",
-       "      <td>Paris</td>\n",
-       "      <td>75011</td>\n",
-       "      <td>18, rue Saint-Ambroise</td>\n",
-       "      <td>48.862374</td>\n",
-       "      <td>2.378141</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>450</th>\n",
-       "      <td>Aux Deux Amis</td>\n",
-       "      <td>+33 1 58 30 38 13</td>\n",
-       "      <td>Tapas,Bar à vins / Cave à manger</td>\n",
-       "      <td>[De 16 à 35 €]</td>\n",
-       "      <td>Paris</td>\n",
-       "      <td>75011</td>\n",
-       "      <td>45, rue Oberkampf</td>\n",
-       "      <td>48.864598</td>\n",
-       "      <td>2.371868</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 Nom          Téléphone  \\\n",
-       "1            Basique  +33 1 40 24 20 48   \n",
-       "51        Le Dauphin  +33 1 55 28 78 88   \n",
-       "94   Le P’tit Pinard  +33 9 87 02 00 11   \n",
-       "450    Aux Deux Amis  +33 1 58 30 38 13   \n",
-       "\n",
-       "                                 Spécialitées            Prix   City  \\\n",
-       "1                                       Tapas  [De 16 à 35 €]  Paris   \n",
-       "51           Tapas,Bar à vins / Cave à manger  [De 36 à 50 €]  Paris   \n",
-       "94   Bistrot,Tapas,Bar à vins / Cave à manger  [De 16 à 35 €]  Paris   \n",
-       "450          Tapas,Bar à vins / Cave à manger  [De 16 à 35 €]  Paris   \n",
-       "\n",
-       "    postal_code           Street_name_1   Latitude  Longitude  \n",
-       "1         75011   164, av. Ledru-Rollin  48.856626   2.379403  \n",
-       "51        75011     131, av. Parmentier  48.869447   2.371115  \n",
-       "94        75011  18, rue Saint-Ambroise  48.862374   2.378141  \n",
-       "450       75011      45, rue Oberkampf   48.864598   2.371868  "
+       "Empty DataFrame\n",
+       "Columns: [Nom, Téléphone, Spécialitées, Prix, City, postal_code, Street_name_1, Latitude, Longitude]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
